8775f08b makes warcraft 3 crash with free(): double free detected in tcache 2
- RX 6900XT
- llvm
f231821e6e9b
- wine GE-Proton7-29-x86_64 from https://github.com/GloriousEggroll/wine-ge-custom/releases/tag/GE-Proton7-29 (recent shared gpu memory implementation required)
- lutris stuff: dxvk 1.10.3, lutris runtime disabled
- kwin_wayland
The battle.net launcher works, but warcraft 3 crashes immediately on startup with free(): double free detected in tcache 2
bisected to
8775f08bf11fbe3a51f8d9affddb11bb945d6278 is the first bad commit
commit 8775f08bf11fbe3a51f8d9affddb11bb945d6278
Author: Jason Ekstrand <jason.ekstrand@collabora.com>
Date: Mon Sep 26 12:17:55 2022 -0500
vulkan/wsi/x11: Configure images via params passed to wsi_swapchain_init()
Reviewed-by: Adam Jackson <ajax@redhat.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/18826>
src/vulkan/wsi/wsi_common_x11.c | 79 ++++++++++++++++++-----------------------
1 file changed, 34 insertions(+), 45 deletions(-)
Edit: Actually mentioning the MR for gitlab to pick it up: !18826 (merged)
Edited by Christoph Haag